--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,6 +16,10 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 
+header {
+  text-align: center;
+}
+
 .wrapper {
   margin-right: auto;
   margin-left:  auto;
