--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <section class="globeHeader">
-   <object id="globe" data="{{ site.baseurl }}/assets/globe.svg" type="image/svg+xml"></object>
+   <object class="globe" data="{{ site.baseurl }}/assets/globe.svg" type="image/svg+xml"></object>
    <p>Industrial Workers of the World</p>
   </section>
   {%- assign default_paths = site.pages | map: "path" -%}
