--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -20,7 +20,7 @@ header {
   text-align: center;
 }
 
-#globe {
+.globe {
   position: absolute; /* fixed */
   padding-top: 25px;
   padding-bottom: 75px;
