--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
   <section class="globeHeader">
    <object class="globe" data="{{ site.baseurl }}/assets/globe.svg" type="image/svg+xml"></object>
-   <p>Industrial Workers of the World</p>
+   <p id="siteTitle">Industrial Workers of the World</p>
   </section>
   {%- assign default_paths = site.pages | map: "path" -%}
   {%- assign page_paths = site.header_pages | default: default_paths -%}
