--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,6 +29,10 @@ header {
   margin-left: -100px;
 }
 
+#siteTitle {
+  margin-top: 250px;
+}
+
 .wrapper {
   margin-right: auto;
   margin-left:  auto;
