--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <script src="https://cdnjs.cloudflare.com/jquery.js"></script>
   <title>{%- if page.title -%}{{ page.title }}{{ ' · ' }}{%- endif -%}{{ site.title }}</title>
   {% seo %}
 </head>
